--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="welcome-container welcome-register">
+    <div class="welcome-container welcome-sign-up">
       <h1>Welcome to our site!</h1>
       <p>
         If you already have an account, 
@@ -17,7 +17,7 @@
       <button class="sign-in-btn">SIGN IN</button>
     </div>
 
-    <div class="welcome-container welcome-login">
+    <div class="welcome-container welcome-sign-in hide">
       <h1>Welcome back to our site!</h1>
       <p>
         If you don't have an account, 
@@ -53,18 +53,14 @@
       <button>SIGN UP</button>
     </div>
 
-    <div class="form-container sign-in-container">
-      <h2>Create Account</h2>
+    <div class="form-container sign-in-container hide">
+      <h2>Login Account</h2>
       <div class="icons-area">
         <div class="facebook-icon"><img src="./img/facebook-icon.png"></div>
         <div class="google-icon"><img src="./img/google-icon.png"></div>
         <div class="linkedin-icon"><img src="./img/linkedin-icon.png"></div>
       </div>
-      <p>or use your email to registration:</p>
-      <div class="input-area">
-        <img src="./img/user-icon.png">
-        <input type="text" placeholder="Username">
-      </div>
+      <p>or use your email to logging:</p>
       <div class="input-area">
         <img src="./img/email-icon.png">
         <input type="text" placeholder="Email">
@@ -72,10 +68,6 @@
       <div class="input-area">
         <img src="./img/padlock-icon.png">
         <input type="text" placeholder="Password">
-      </div>
-      <div class="input-area">
-        <img src="./img/padlock-icon.png">
-        <input type="text" placeholder="Confirm Password">
       </div>
       <button>SIGN UP</button>
     </div>
