new errors on validation form*

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <div class="linkedin-icon"><img src="./img/linkedin-icon.png"></div>
       </div>
       <p>or use your email to registration:</p>
-      <div class="input-area">
+      <div class="input-area input-username">
         <img src="./img/user-icon.png">
         <input id="username" type="text" placeholder="Username" required>
         <div class="input-error">
