--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
           <span></span>
         </div>
       </div>
-      <button type="submit">SIGN UP</button>
+      <button type="submit" id="sign-up-submit">SIGN UP</button>
     </div>
 
     <div class="form-container sign-in-container hide">
