path utils and login test

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -102,5 +102,6 @@
   </div>
 
   <script src="../js/login.js" type="module"></script>
+  <script src="../router.js" type="module"></script>
 </body>
 </html>
