building profile.html

--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -7,7 +7,32 @@
   <title>Profile</title>
 </head>
 <body>
+  <div class="banner">
+    <div class="banner-container">
+      <h1>Name</h1>
+      <span>Biography</span>
+    </div>
+  </div>
   <div class="container">
+    <div class="profile-area">
+      <img>
+      <h2>Username</h2>
+      <div class="profile-info">
+        <div>
+          <span>friends</span>
+          <b>22</b>
+        </div>
+        <div>
+          <span>games</span>
+          <b>45</b>
+        </div>
+        <div>
+          <span>reviews</span>
+          <b>3</b>
+        </div>
+      </div>
+    </div>
+    <div></div>
   </div>
   <script type="module" src="../js/profile.js"></script>
 </body>
