--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -19,20 +19,22 @@
       <h2>Username</h2>
       <div class="profile-info">
         <div>
-          <span>friends</span>
+          <span>followers</span>
           <b>22</b>
         </div>
         <div>
-          <span>games</span>
-          <b>45</b>
+          <span>friends</span>
+          <b>15</b>
         </div>
         <div>
-          <span>reviews</span>
-          <b>3</b>
+          <span>games</span>
+          <b>47</b>
         </div>
       </div>
+      <button class="edit-profile-btn">Edit Profile</button>
     </div>
-    <div></div>
+
+    <div class="profile-games"></div>
   </div>
   <script type="module" src="../js/profile.js"></script>
 </body>
