edit profile component

--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -23,18 +23,18 @@
           <b>22</b>
         </div>
         <div>
-          <span>friends</span>
+          <span>following</span>
           <b>15</b>
         </div>
         <div>
-          <span>games</span>
-          <b>47</b>
+          <span>posts</span>
+          <b>3</b>
         </div>
       </div>
       <button class="edit-profile-btn">Edit Profile</button>
     </div>
 
-    <div class="profile-games"></div>
+    <div class="profile-content"></div>
   </div>
   <script type="module" src="../js/profile.js"></script>
 </body>
