edit profile form bugs fixed

--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -9,14 +9,14 @@
 <body>
   <div class="banner">
     <div class="banner-container">
-      <h1>Name</h1>
-      <span>Biography</span>
+      <h1 class="profile-name">Name</h1>
+      <span class="profile-bio">Biography</span>
     </div>
   </div>
   <div class="container">
     <div class="profile-area">
       <img>
-      <h2>Username</h2>
+      <h2 class="profile-username">Username</h2>
       <div class="profile-info">
         <div>
           <span>followers</span>
