--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -9,10 +9,33 @@
 <body>
   <div class="banner">
     <div class="banner-container">
-      <h1 class="profile-name">Name</h1>
-      <span class="profile-bio">Biography</span>
+      <div class="banner-infos">
+        <h1 class="profile-name">Name</h1>
+        <span class="profile-bio">Biography</span>
+        <button class="edit-profile-btn" id="edit-profile-btn-mobile">Edit Profile</button>
+      </div>
+      
+      <div class="profile-area-mobile">
+        <img>
+        <h2>@username</h2>
+        <div class="profile-info">
+          <div>
+            <span>followers</span>
+            <b>22</b>
+          </div>
+          <div>
+            <span>following</span>
+            <b>15</b>
+          </div>
+          <div>
+            <span>posts</span>
+            <b>3</b>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+
   <div class="container">
     <div class="profile-area">
       <img>
