--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -69,6 +69,7 @@
         </div>
       </div>
       <button type="submit" id="sign-up-submit">SIGN UP</button>
+      <span>If you already have an account, <b>sign in</b>.</span>
     </div>
 
     <div class="form-container sign-in-container hide">
@@ -97,6 +98,7 @@
         </div>
       </div>
       <button type="submit" id="sign-in-submit">SIGN IN</button>
+      <span>If you don't have an account, <b>sign up</b>.</span>
     </div>
 
   </div>
