more bugs fixed and functional icons

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -29,8 +29,8 @@
     <div class="form-container sign-up-container">
       <h2>Create Account</h2>
       <div class="icons-area">
-        <div class="facebook-icon"><img src="../img/facebook-icon.png"></div>
-        <div class="google-icon"><img src="../img/google-icon.png"></div>
+        <div class="facebook-icon"><img src="../img/insta-icon.png"></div>
+        <div class="google-icon"><img src="../img/git-icon.png"></div>
         <div class="linkedin-icon"><img src="../img/linkedin-icon.png"></div>
       </div>
       <p>or use your email to registration:</p>
@@ -59,8 +59,8 @@
     <div class="form-container sign-in-container hide">
       <h2>Login Account</h2>
       <div class="icons-area">
-        <div class="facebook-icon"><img src="../img/facebook-icon.png"></div>
-        <div class="google-icon"><img src="../img/google-icon.png"></div>
+        <div class="facebook-icon"><img src="../img/insta-icon.png"></div>
+        <div class="google-icon"><img src="../img/git-icon.png"></div>
         <div class="linkedin-icon"><img src="../img/linkedin-icon.png"></div>
       </div>
       <p>or use your email to logging:</p>
