--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/login.css">
+  <link rel="stylesheet" href="public/styles/login.css">
   <title></title>
 </head>
 <body>
@@ -29,28 +29,28 @@
     <div class="form-container sign-up-container">
       <h2>Create Account</h2>
       <div class="icons-area">
-        <div class="facebook-icon"><img src="../img/insta-icon.png"></div>
-        <div class="google-icon"><img src="../img/git-icon.png"></div>
-        <div class="linkedin-icon"><img src="../img/linkedin-icon.png"></div>
+        <div class="facebook-icon"><img src="/public/img/insta-icon.png"></div>
+        <div class="google-icon"><img src="/public/img/git-icon.png"></div>
+        <div class="linkedin-icon"><img src="/public/img/linkedin-icon.png"></div>
       </div>
       <p>or use your email to registration:</p>
       <div class="input-area input-username">
-        <img src="../img/user-icon.png">
+        <img src="/public/img/user-icon.png">
         <input id="username" type="text" placeholder="Username" required>
       </div>
       <div class="input-area input-email">
-        <img src="../img/email-icon.png">
+        <img src="/public/img/email-icon.png">
         <input id="email" type="email" placeholder="Email" required>
       </div>
       <div class="input-area input-password">
-        <img src="../img/padlock-icon.png">
+        <img src="/public/img/padlock-icon.png">
         <input id="password" type="password" placeholder="Password" required>
-        <img src="../img/show-password.png" class="show-password">
+        <img src="/public/img/show-password.png" class="show-password">
       </div>
       <div class="input-area input-confirm-password">
-        <img src="../img/padlock-icon.png">
+        <img src="/public/img/padlock-icon.png">
         <input id="confirm-password" type="password" placeholder="Confirm Password" required>
-        <img src="../img/show-password.png" class="show-password">
+        <img src="/public/img/show-password.png" class="show-password">
       </div>
       <button type="submit" id="sign-up-submit">SIGN UP</button>
       <span>If you already have an account, <b>sign in</b>.</span>
@@ -59,19 +59,19 @@
     <div class="form-container sign-in-container hide">
       <h2>Login Account</h2>
       <div class="icons-area">
-        <div class="facebook-icon"><img src="../img/insta-icon.png"></div>
-        <div class="google-icon"><img src="../img/git-icon.png"></div>
-        <div class="linkedin-icon"><img src="../img/linkedin-icon.png"></div>
+        <div class="facebook-icon"><img src="/public/img/insta-icon.png"></div>
+        <div class="google-icon"><img src="/public/img/git-icon.png"></div>
+        <div class="linkedin-icon"><img src="/public/img/linkedin-icon.png"></div>
       </div>
       <p>or use your email to logging:</p>
       <div class="input-area input-email-login">
-        <img src="../img/email-icon.png">
+        <img src="/public/img/email-icon.png">
         <input id="email-login" type="email" placeholder="Email" required>
       </div>
       <div class="input-area input-password-login">
-        <img src="../img/padlock-icon.png">
+        <img src="/public/img/padlock-icon.png">
         <input id="password-login" type="password" placeholder="Password" required>
-        <img src="../img/show-password.png" class="show-password">
+        <img src="/public/img/show-password.png" class="show-password">
       </div>
       <button type="submit" id="sign-in-submit">SIGN IN</button>
       <span>If you don't have an account, <b>sign up</b>.</span>
@@ -79,7 +79,6 @@
 
   </div>
 
-  <script src="../js/login.js" type="module"></script>
-  <script src="../router.js" type="module"></script>
+  <script src="public/js/login.js" type="module"></script>
 </body>
 </html>
