--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
     <div class="form-container sign-up-container">
       <h2>Create Account</h2>
       <div class="icons-area">
-        <div class="facebook-icon"><img src="/public/img/insta-icon.png"></div>
-        <div class="google-icon"><img src="/public/img/git-icon.png"></div>
-        <div class="linkedin-icon"><img src="/public/img/linkedin-icon.png"></div>
+        <div class="facebook-icon"><img src="public/img/insta-icon.png"></div>
+        <div class="google-icon"><img src="public/img/git-icon.png"></div>
+        <div class="linkedin-icon"><img src="public/img/linkedin-icon.png"></div>
       </div>
       <p>or use your email to registration:</p>
       <div class="input-area input-username">
-        <img src="/public/img/user-icon.png">
+        <img src="public/img/user-icon.png">
         <input id="username" type="text" placeholder="Username" required>
       </div>
       <div class="input-area input-email">
-        <img src="/public/img/email-icon.png">
+        <img src="public/img/email-icon.png">
         <input id="email" type="email" placeholder="Email" required>
       </div>
       <div class="input-area input-password">
-        <img src="/public/img/padlock-icon.png">
+        <img src="public/img/padlock-icon.png">
         <input id="password" type="password" placeholder="Password" required>
-        <img src="/public/img/show-password.png" class="show-password">
+        <img src="public/img/show-password.png" class="show-password">
       </div>
       <div class="input-area input-confirm-password">
-        <img src="/public/img/padlock-icon.png">
+        <img src="public/img/padlock-icon.png">
         <input id="confirm-password" type="password" placeholder="Confirm Password" required>
-        <img src="/public/img/show-password.png" class="show-password">
+        <img src="public/img/show-password.png" class="show-password">
       </div>
       <button type="submit" id="sign-up-submit">SIGN UP</button>
       <span>If you already have an account, <b>sign in</b>.</span>
@@ -59,19 +59,19 @@
     <div class="form-container sign-in-container hide">
       <h2>Login Account</h2>
       <div class="icons-area">
-        <div class="facebook-icon"><img src="/public/img/insta-icon.png"></div>
-        <div class="google-icon"><img src="/public/img/git-icon.png"></div>
-        <div class="linkedin-icon"><img src="/public/img/linkedin-icon.png"></div>
+        <div class="facebook-icon"><img src="public/img/insta-icon.png"></div>
+        <div class="google-icon"><img src="public/img/git-icon.png"></div>
+        <div class="linkedin-icon"><img src="public/img/linkedin-icon.png"></div>
       </div>
       <p>or use your email to logging:</p>
       <div class="input-area input-email-login">
-        <img src="/public/img/email-icon.png">
+        <img src="public/img/email-icon.png">
         <input id="email-login" type="email" placeholder="Email" required>
       </div>
       <div class="input-area input-password-login">
-        <img src="/public/img/padlock-icon.png">
+        <img src="public/img/padlock-icon.png">
         <input id="password-login" type="password" placeholder="Password" required>
-        <img src="/public/img/show-password.png" class="show-password">
+        <img src="public/img/show-password.png" class="show-password">
       </div>
       <button type="submit" id="sign-in-submit">SIGN IN</button>
       <span>If you don't have an account, <b>sign up</b>.</span>
