--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
         <img src="img/show-password.png" class="show-password">
       </div>
       <button type="submit" id="sign-up-submit">SIGN UP</button>
-      <span>If you already have an account, <b>sign in</b>.</span>
+      <span class="welcome-mobile">If you already have an account, <b>sign in</b>.</span>
     </div>
 
     <div class="form-container sign-in-container hide">
@@ -74,7 +74,7 @@
         <img src="img/show-password.png" class="show-password">
       </div>
       <button type="submit" id="sign-in-submit">SIGN IN</button>
-      <span>If you don't have an account, <b>sign up</b>.</span>
+      <span class="welcome-mobile">If you don't have an account, <b>sign up</b>.</span>
     </div>
 
   </div>
